    - fromzeckendorf(str)             n from Zeckendorf binary string
    - lucasu(p,q,k)                   U(p,q)_k
    - lucasv(p,q,k)                   V(p,q)_k
    - lucasuv(p,q,k)                  U(p,q)_k, V(p,q)_k
    - lucasumod(p,q,k,n)              U(p,q)_k mod n
    - lucasvmod(p,q,k,n)              V(p,q)_k mod n
    - lucasuvmod(p,q,k,n)             (U(p,q)_k mod n, V(p,q)_k mod n)
    - prime_powers([start,] end)      array ref of prime powers
    - next_prime_power(n)             next prime power: p > n
    - prev_prime_power(n)             previous prime power: p < n
    - prime_power_count([start,] end) count of prime powers
    - prime_power_count_approx(n)     fast approximate prime power count
    - prime_power_count_lower(n)      fast prime power count lower bound
    - prime_power_count_upper(n)      fast prime power count upper bound
    - nth_prime_power(n)              the nth prime power
    - nth_prime_power_approx(n)       fast approximate nth prime power
    - nth_prime_power_lower(n)        fast nth prime power lower bound
    - nth_prime_power_upper(n)        fast nth prime power upper bound
    - next_perfect_power(n)           next perfect power: p > n
    - prev_perfect_power(n)           previous perfect power: p < n
    - perfect_power_count([beg,] end) count of perfect powers
    - perfect_power_count_approx(n)   fast approximate perfect power count
    - perfect_power_count_lower(n)    fast perfect power count lower bound
    - perfect_power_count_upper(n)    fast perfect power count upper bound
    - nth_perfect_power(n)            the nth perfect power
    - nth_perfect_power_approx(n)     fast approximate nth perfect power
    - nth_perfect_power_lower(n)      fast nth perfect power lower bound
    - nth_perfect_power_upper(n)      fast nth perfect power upper bound
    - lucky_numbers([start],] end)    array ref of lucky numbers
    - lucky_count([start,] end)       count of lucky numbers