@@ -227,6 +227,7 @@ t/26-mex.t
 t/26-mod.t
 t/26-perfectpowers.t
 t/26-pillai.t
+t/26-pisano.t
 t/26-polygonal.t
 t/26-powerfree.t
 t/26-powerful.t
