@@ -104,6 +104,7 @@ Revision history for Perl module Math::Prime::Util
     - lucasumod(p,q,k,n)              U(p,q)_k mod n
     - lucasvmod(p,q,k,n)              V(p,q)_k mod n
     - lucasuvmod(p,q,k,n)             (U(p,q)_k mod n, V(p,q)_k mod n)
+    - pisano_period(n)                period of modular Fibonacci sequence
     - prime_powers([start,] end)      array ref of prime powers
     - next_prime_power(n)             next prime power: p > n
     - prev_prime_power(n)             previous prime power: p < n
